--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "braintree-web-drop-in-react": "^1.1.0",
+    "compression": "^1.7.4",
     "drift-zoom": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
